network/resources/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: system
spec:
  controllerName: traefik.io/gateway-controller
  #controllerName: io.cilium/gateway-controller
