network/resources/cilium-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
spec:
  gatewayClassName: cilium
# This doesn't appear to be supported by Cilium 1.16.3
#  infrastructure:
#    annotations:
#      lbipam.cilium.io/ips: "10.1.1.50"
#      lbipam.cilium.io/sharing-key: "cilium-gateway"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-xmple-io
      hostname: "*.xmple.io"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: xmple-io-tls
