network/resources/traefik-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway-tls
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "256"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https-1
      protocol: HTTPS
      port: 443
      hostname: xmple.io
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: traefik-gateway-tls
    - name: https-2
      hostname: "*.xmple.io"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: traefik-gateway-tls
